# delve

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bootstrap.py  dlv  dlv.bat  docker-compose.yaml  package.json  pyproject.toml  requirements.txt  set-env  set-env.bat  test-bootstrap.py  webpack.config.js
.github/workflows/: ci.yml  container-build.yml  release.yml
delve/: __init__.py  settings.py
doc/admin/: Advanced_Logging.md  Backup_and_Restore.md  Bootstrap_Guide.md  Configuration.md  Ingesting_Data.md  Installation_and_Setup.md  Introduction.md  Monitoring_and_Maintenance.md  Performance_Tuning.md  Scaling_and_Load_Balancing.md  Security.md  Troubleshooting.md  User_and_Group_Management.md  index.md
doc/user/: App_Developer_Guide.md  FAQ.md  Getting_Started.md  Ingesting_Data.md  Searching_Filtering_and_More.md  Usage_Tips.md  Using_the_Web_UI.md  index.md
events/: api.py
events/search_commands/: __init__.py  filter.py
events/search_commands/qs/: _util.py
events/static/css/: dense.css
events/templates/events/: base.html  explore.html
events/test/: test_event_view_set.py
templates/: project-base.html
templates/project/: base.html
utilities/cli/: syslog-receiver.py
